fix(ui): Stop auto zooming on mobile devices

--- a/apps/app/src/index.css
+++ b/apps/app/src/index.css
@@ -27,3 +27,7 @@
 .typography .task-item[data-checked="true"] p {
   @apply text-muted-foreground line-through;
 }
+
+.typography p {
+  @apply text-base;
+}
